#pragma once

#include "MobModelLayout.h"

#include <list>

struct WaveLayout
{
	std::list<MobModelLayout> mobLayout;
};
