#pragma once

enum class AttackType
{
	Direct,
	Arc,
	Splash,
	Line
};
