#pragma once

enum class DamageStyle
{
	Poison,
	Delay,
	Standard
};
