#pragma once

enum class DamageType
{
	Corrosive,
	Pearcent,
	Standard
};
